--- a/home.bleedingbox.dev/style.css
+++ b/home.bleedingbox.dev/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap");
 
 :root {
-  padding: 2rem;
+  padding: 1rem;
   color: #eeeeee;
   background-color: #080808;
   font-family: "JetBrains Mono", monospace;
@@ -14,7 +14,6 @@
 
 #logo {
   font-size: 32px;
-  padding: 1rem;
   color: #C10023;
 }
 
@@ -49,4 +48,11 @@ footer {
 
 #badges {
 	text-align: center;
+}
+
+#pride {
+	width: 100%;
+	height: 100px;
+	border: 1px solid black;
+	background: linear-gradient(180deg, #5BCEFA 20%, #F5A9B8 20%, 40%, #FFFFFF 40%, 60%, #F5A9B8 60%, 80%, #5BCEFA 80%);
 }
